# K-BERT

./: .gitignore  kbert_embeddings_eval.py  main_ner.py  main_ner_evaluate.py  main_ner_trainer.py  pyproject.toml  run_kbert_ner.py
brain/: knowgraph.py
brain/kgs/: clinia_kg.spo  medical_kg_en.spo
datasets/: dataset.py
datasets/clinia_ner/ser_bus/: labels.csv
datasets/embedding_eval/: data.csv
models/: bert_config.json
models/en/bert_base_uncased/: config.json
uer/utils/: vocab.py
utils/: convert_kg.py  create_kg.py  evaluate_ner.py
utils/stop_words/: stop_words.py
